add webinar alert, some wording improvements

--- a/src/markdown/help/employee-participation-guide.mdx
+++ b/src/markdown/help/employee-participation-guide.mdx
@@ -9,44 +9,43 @@ images:
   - ../../img/esop.png
 ---
 
-The following guide will help you get up and running with your employee participation plans on Ledgy.
+<div class="alert alert-primary">
+  Ask all your questions at the free <strong>Webinar on June 4, 11:30</strong><br />
+  <small>
+    With Karim Maizar of Kellerhals Carrard and Ben Brandt of Ledgy<br />
+    The link to the webinar will be published here.
+  </small>
+</div>
 
-**Note**: This is currently only available in Switzerland. Other countries will follow. Reach out to us if you want yours to be next.
+**Note**: These legal templates are currently only available in **Switzerland**. Other countries will follow. Reach out to us if you want yours to be next.
 
 <Img src="legal-templates.png" align="right" size="300" />
 
-##### Setup
+##### How to get up and running
 
 1. Choose between a stock option plan (ESOP) or phantom stock option plan (PSOP). [This guide](/help/employee-participation-guide/esop-vs-psop) helps you by comparing their advantages and disadvantes.
 
-2. Create your company on Ledgy (free), head to the documents page and download your template
+2. [Sign up](https://app.ledgy.com/signup), create your company (free), head to the documents page, click *Legal templates* and download your template
 
 3. There are some parts to decide and adjust. The respective guides for [ESOP](/help/employee-participation-guide/esop) and [PSOP](/help/employee-participation-guide/psop) will help you to decide.
 
-4. Contact a law firm to answer any remaining questions about your specific needs
+4. Contact one of the partnering law firms to answer any remaining questions about your specific needs.
 
-5. Then, to give the first grant to an employee
-    * Decide the amount to give and adjust the allocation at the end of the contract accordingly
-    * Let the employee sign participation plan agreement including the allocation
+5. When all is set, to give the first grant to an employee:
+    * Decide the amount to give and adjust the allocation at the end of the contract accordingly.
+    * Let the employee sign participation plan agreement.
 
 <Img src="esop.png" align="right" size="300"/>
 
-6. On Ledgy
-    * Head to the transaction page (free) or incentives page (premium) and create an ESOP or PSOP pool
-    * Create option or phantom option transactions from the pool to your employees (premium)
-    * In the first transaction define the vesting schedule from the contract. You can then use it in all the following transactions (preset)
-    * Commit the new option grants. Then you will get email notifications for important vesting events like the cliff end, and your employees can see their grants in their personal portfolio.
-    * Invite your employees to give them access to their portfolio
+6. To track your pool and vesting schedules on Ledgy:
+    * Head to the transaction page (free) or incentives page (premium) and create an ESOP or PSOP pool.
+    * Add option or phantom option transactions from the pool to your employees (premium).
+    * In the first transaction define the vesting schedule from the contract. You can then use it as preset in all the following transactions.
+    * Commit the new option grants. This enables email notifications for important vesting events like the cliff end, and your employees can see their grants in their personal portfolio.
+    * Invite your employees to give them access to their portfolio.
 
+7. Congrats, you’re all set!
 
-7. You’re all set!
-
-
-##### More resources
-
-- [Video by Kellerhals-Carrard](https://www.youtube.com/watch?v=RBm4oyPy23w&t=8s)
-
-- [Slides by Ledgy](https://docs.google.com/presentation/d/1y_ZH8FBELIdJgwd5FhXFw2Dl6TBLgtLyoICQZJIcXKs/edit#slide=id.g4ab326567f_1_0)
 
 <Img src="lexr.png" size="50" align="right" />
 
@@ -56,4 +55,10 @@ The following guide will help you get up and running with your employee particip
 
 ##### Partners
 
-[Kellerhals Carrard](https://www.kellerhals-carrard.ch/), [Wenger&Vieli](https://www.wengervieli.ch/) and [Lexr](https://lexr.ch/).
+Our partners [Kellerhals Carrard](https://www.kellerhals-carrard.ch/), [Wenger&Vieli](https://www.wengervieli.ch/) and [Lexr](https://lexr.ch/) offer a free first consultation for startups.
+
+##### More resources
+
+- [Video by Kellerhals-Carrard](https://www.youtube.com/watch?v=RBm4oyPy23w&t=8s)
+
+- [Slides by Ledgy](https://docs.google.com/presentation/d/1y_ZH8FBELIdJgwd5FhXFw2Dl6TBLgtLyoICQZJIcXKs/edit#slide=id.g4ab326567f_1_0)
