Add psop & esop parameter guides

--- a/src/markdown/help/employee-participation-guide.mdx
+++ b/src/markdown/help/employee-participation-guide.mdx
@@ -12,7 +12,7 @@ images:
 <div class="alert alert-primary">
   Ask all your questions at the free <strong>Webinar on June 4, 11:30</strong><br />
   <small>
-    With Karim Maizar of Kellerhals Carrard and Ben Brandt of Ledgy<br />
+    With Karim Maizar of Kellerhals Carrard and Ben Brandt of Ledgy.<br />
     The link to the webinar will be published here.
   </small>
 </div>
