--- a/src/markdown/help/employee-participation-guide/esop.mdx
+++ b/src/markdown/help/employee-participation-guide/esop.mdx
@@ -3,7 +3,168 @@ title: "Stock Option Plan Guide"
 description: "Getting started with Ledgy’s ESOP template"
 images:
 ---
-The following guide will help you decide which parameters need to be decided for a stock option plan.
 
-#### The seven parameters you need to decide
-* ...
+The following guide will help you decide which parameters need to be decided for a stock option plan. For remaining questions, contact one of the partnering law firms.
+
+#### The parameters you need to decide
+<table class="table table-bordered table-striped">
+  <colgroup>
+    <col width="20%" />
+    <col width="45%" />
+    <col width="35%" />
+  </colgroup>
+  <tbody>
+    <tr>
+      <th>Parameter</th>
+      <th>What to decide</th>
+      <th>How to decide</th>
+    </tr>
+    <tr>
+      <td>Reserved pool size</td>
+      <td>
+        Number of options reserved for employees, with one option equal to one common share of the company.<br /><br />
+        It is often also expressed in percent of the total shares.
+      </td>
+      <td>
+        Discuss with your board, they have to approve the plan.<br /><br />
+        <strong>Common practice</strong> at the seed stage is 5 - 10% of the company on a fully diluted basis. This typically goes up to 20% during the company lifetime.
+      </td>
+    </tr>
+    <tr>
+      <td>Vesting</td>
+      <td>
+        <ol>
+          <li>Number of years</li>
+          <li>Cliff or not</li>
+          <li>Interval of allocation</li>
+        </ol>
+      </td>
+      <td>
+        Discuss with your board. Common practice is 3 - 4 years duration, monthly allocation, 1 year cliff.
+      </td>
+    </tr>
+    <tr>
+      <td>Accelerated Vesting at exit, change of control or IPO</td>
+      <td>
+        Choose among 3 possibilities:
+        <ol>
+          <li>Single trigger: Automatic full vesting</li>
+          <li>
+            Double trigger: Automatic full vesting only if<br />
+            (i) transaction (exit, change of control, IPO) occurred and <br />
+            (ii) a certain number of months pass after the transaction (e.g. 12) or termination of employment
+          </li>
+          <li>Accelerated vesting only as determined by board of directors</li>
+        </ol>
+      </td>
+      <td>
+        The common practice is 2. as it provides employees with the security of accelerated vesting, while still protecting the buyer by preventing that all employees leave with the money directly after the transaction. Without this, the company might not be attractive to buyers.
+      </td>
+    </tr>
+    <tr>
+      <td>Exercise Price of Option (strike price)</td>
+      <td>
+        Choose between
+        <ol>
+          <li>Corresponding to nominal value of common share</li>
+          <li>Fair market value of one common share at time of grant (to be confirmed from tax law point of view)</li>
+        </ol>
+        If you want to implement a tax-ruling to agree with the tax authority on a fair market value of the common shares upon exercise of the options
+      </td>
+      <td>
+        The common practice is 1. It is also the most employee friendly.<br /><br />
+        Tax ruling: In order to maximally take advantage of the tax optimization, a tax ruling is recommended. However it can also be done at a later time point (but of course before the first exercises).
+      </td>
+    </tr>
+    <tr>
+      <td>Funding</td>
+      <td>
+        Choose between
+        <ol>
+          <li>Conditional share capital</li>
+          <li>Authorized share capital</li>
+          <li>Treasury shares (and if the shares come from specific shareholders such as founders)</li>
+        </ol>
+      </td>
+      <td>The common practice is a conditional share capital.</td>
+    </tr>
+    <tr>
+      <td>Termination <strong>during</strong> Vesting Period</td>
+      <td>
+        If an employee is terminated (in good terms) before the end of the vesting period, vested Awards are kept, unless the Participant is a bad leaver and unvested awards lapse.<br /><br />
+        In case of disability or death, vested awards are kept and unvested awards lapse.<br /><br />
+        Also, you should decide if the company should have a repurchase right on vested awards in case the employee is fired (in good terms).
+      </td>
+      <td>
+        The common practice is not to have a repurchase right and is more friendly for the employees.
+      </td>
+    </tr>
+    <tr>
+      <td>Termination <strong>after</strong> Vesting Period</td>
+      <td>
+        If the company should have a repurchase right on vested awards in case the employee is terminated (in good terms).
+      </td>
+      <td>
+        The common practice is not to have a repurchase right. The alternative is also not very employee friendly.
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+#### Standard parameters, but good to know
+<table class="table table-bordered table-striped">
+  <colgroup>
+    <col width="20%" />
+    <col width="80%" />
+  </colgroup>
+  <tbody>
+    <tr>
+      <td>Eligibility</td>
+      <td>Who should be able to receive rewards: Employees, consultants, advisors, members of the board of directors (the “Participants”)</td>
+    </tr>
+    <tr>
+      <td>Issue Price</td>
+      <td>Free of charge</td>
+    </tr>
+    <tr>
+      <td>Term of the Plan (Expiration)</td>
+      <td>10 years</td>
+    </tr>
+    <tr>
+      <td>Blocking Period for Shares</td>
+      <td>The shares awarded under the ESOP are subjected to a blocking period (Sperrfrist) of up to 10 years starting at the exercise date. Common practice is 4 - 6 years.</td>
+    </tr>
+    <tr>
+      <td>Conditions to Exercise</td>
+      <td>
+        <ul>
+          <li>Vesting fulfilled</li>
+          <li>Full payment of exercise price</li>
+          <li>Exercise within option term</li>
+          <li>Accession to then current shareholders’ agreement</li>
+          <li>No material breach of employment relationship</li>
+        </ul>
+      </td>
+    </tr>
+    <tr>
+      <td>Transferability of Options</td>
+      <td>None, unless in case of death as under the applicable matrimonial property and inheritance laws and the Participant's lawful last will.</td>
+    </tr>
+    <tr>
+      <td>Transferability of Shares</td>
+      <td>According to shareholders’ agreement.</td>
+    </tr>
+    <tr>
+      <td>Anti-Dilution Protection</td>
+      <td>The Participants acknowledge and agree that the Options granted under this Plan are granted without protection against future dilutive effects (e.g. issuance of new shares of the Company).</td>
+    </tr>
+    <tr>
+      <td>Tax and Social Security</td>
+      <td>Income tax consequences or social security contributions in connection with participation in the ESOP according to applicable laws.</td>
+    </tr>
+    <tr>
+      <td>Governing law and Jurisdiction</td>
+      <td>Swiss law, place of domicile of the Company.</td>
+    </tr>
+  </tbody>
+</table>
