--- a/src/markdown/help/employee-participation-guide/psop.mdx
+++ b/src/markdown/help/employee-participation-guide/psop.mdx
@@ -4,10 +4,15 @@ description: "Getting started with Ledgy’s PSOP template"
 images:
 ---
 
-The following guide will help you decide which parameters need to be decided for a phantom plan.
+The following guide will help you decide which parameters need to be decided for a phantom plan. For remaining questions, contact one of the partnering law firms.
 
-#### The seven parameters you need to decide
+#### The parameters you need to decide
 <table class="table table-bordered table-striped">
+  <colgroup>
+    <col width="20%" />
+    <col width="45%" />
+    <col width="35%" />
+  </colgroup>
   <tbody>
     <tr>
       <th>Parameter</th>
@@ -15,80 +20,91 @@ The following guide will help you decide which parameters need to be decided for
       <th>How to decide</th>
     </tr>
     <tr>
-      <td>Size and Type of Awards</td>
+      <td>Reserved pool size</td>
       <td>
-        * Number of virtual shares reserved for employees, with one virtual share = one common share of the company
-        * Often expressed in percent of the total shares
+        Number of virtual shares reserved for employees, with one virtual share equal to one common share of the company.<br /><br />
+        It is often also expressed in percent of the total shares.
       </td>
       <td>
-        * Discuss with your board, they have to approve the plan
-        * Common practice at the seed stage is 5% - 10% of the company on a fully diluted basis
+        Discuss with your board, they have to approve the plan.<br /><br />
+        <strong>Common practice</strong> at the seed stage is 5 - 10% of the company on a fully diluted basis. This typically goes up to 20% during the company lifetime.
       </td>
     </tr>
     <tr>
       <td>Vesting</td>
       <td>
-        * Number of years
-        * Cliff or not
-        * Interval of allocation
+        <ol>
+          <li>Number of years</li>
+          <li>Cliff or not</li>
+          <li>Interval of allocation</li>
+        </ol>
       </td>
       <td>
-        * Discuss with your board
-        * Common practice: 4 years, monthly allocation, 1 year cliff
+        Discuss with your board. Common practice is 3 - 4 years duration, monthly allocation, 1 year cliff.
       </td>
     </tr>
     <tr>
-      <td>Accelerated Vesting at IPO, change of control or exit</td>
+      <td>Accelerated Vesting at exit, change of control or IPO</td>
       <td>
-        Choose among these 3 possibilities:
-          * Single trigger (e.g. automatic full vesting)
-          * Double trigger (automatic full vesting only if (i) transaction (exit, IPO, change of control) occurred and (ii) lapse of e.g. 12 months thereafter or termination of employment)
-          * Accelerated vesting only as determined by board of directors
+        Choose among 3 possibilities:
+        <ol>
+          <li>Single trigger: Automatic full vesting</li>
+          <li>
+            Double trigger: Automatic full vesting only if<br />
+            (i) transaction (exit, change of control, IPO) occurred and <br />
+            (ii) a certain number of months pass after the transaction (e.g. 12) or termination of employment
+          </li>
+          <li>Accelerated vesting only as determined by board of directors</li>
+        </ol>
       </td>
       <td>
-        The common practice is b. as it provides employees with the security of accelerated vesting, while still protecting the buyer by preventing that all employees leave with the money directly after the transaction. Without this, the company might not be attractive to buyers.
+        The common practice is 2. as it provides employees with the security of accelerated vesting, while still protecting the buyer by preventing that all employees leave with the money directly after the transaction. Without this, the company might not be attractive to buyers.
       </td>
     </tr>
     <tr>
       <td>Exercise Price of Option (strike price)</td>
       <td>
         Choose among these 4 possibilities:
-        * Free of charge
-        * Corresponding to nominal value of common registered share
-        * Determination of board of directors on case by case basis
-        * Fair market value of one common registered share at time of grant (to be confirmed from tax law point of view)
+        <ol>
+          <li>Free of charge</li>
+          <li>Corresponding to nominal value of common registered share</li>
+          <li>Determination of board of directors on case by case basis</li>
+          <li>Fair market value of one common registered share at time of grant (to be confirmed from tax law point of view)</li>
+        </ol>
       </td>
       <td>
-        The common practice is a. It is also the most employee friendly and the least bureaucratic one (no need to receive any payment from employee).
-      </td>
-    </tr>
-    <tr>
-      <td>Triggering Cash-Events</td>
-      <td>
-        * Several types of events can trigger a payment to phantom holders: the payment of dividends, a voluntary liquidation, a change of control / exit (transfer of >50% of voting rights or sale of its assets), IPO.
-        * Most are standard, but you should decide whether you want dividend payments to be a triggering event.
-      </td>
-      <td>
-        * Think about whether your startup could someday give out dividends or if will aim for an exit before.
-        * Common practice: to leave it open for all cases, you can simply add the dividends clause in the plan. Also this scenario mirrors best real shares.
+        The common practice is 1. It is also the most employee friendly and the least bureaucratic one (no need to receive any payment from employee).
       </td>
     </tr>
     <tr>
       <td>Triggering Cash-Events</td>
       <td>
-        If the company should have a repurchase right on vested awards in case the employee is fired (in good terms).
+        Several types of events can trigger a payment to phantom holders: the payment of dividends, a voluntary liquidation, a change of control / exit (transfer of >50% of voting rights or sale of its assets) or IPO.<br /><br />
+        Most are standard, but you should decide whether you want dividend payments to be a triggering event.
+      </td>
+      <td>
+        Think about whether your startup could someday give out dividends or if will aim for an exit before.<br /><br />
+        Common practice: Usually dividends are no triggering event, as it adds another layer of complexity.
+      </td>
+    </tr>
+    <tr>
+      <td>Termination <strong>during</strong> Vesting Period</td>
+      <td>
+        If an employee is terminated (in good terms) before the end of the vesting period, vested Awards are kept, unless the Participant is a bad leaver and unvested awards lapse.<br /><br />
+        In case of disability or death, vested awards are kept and unvested awards lapse.<br /><br />
+        Also, you should decide if the company should have a repurchase right on vested awards in case the employee is fired (in good terms).
       </td>
       <td>
         The common practice is not to have a repurchase right and is more friendly for the employees.
       </td>
     </tr>
     <tr>
-      <td>Termination during Vesting Period</td>
+      <td>Termination <strong>after</strong> Vesting Period</td>
       <td>
-        If the company should have a repurchase right on vested awards if the employee is fired (in good terms, i.e. not a bad leaver)
+        If the company should have a repurchase right on vested awards in case the employee is terminated (in good terms).
       </td>
       <td>
-        The common practice is not to have a repurchase right and is more friendly for the employees.
+        The common practice is not to have a repurchase right. The alternative is also not very employee friendly.
       </td>
     </tr>
   </tbody>
@@ -96,10 +112,53 @@ The following guide will help you decide which parameters need to be decided for
 
 #### Standard parameters, but good to know
 <table class="table table-bordered table-striped">
+  <colgroup>
+    <col width="20%" />
+    <col width="80%" />
+  </colgroup>
   <tbody>
     <tr>
-      <td>Parameter</td>
-      <td>What to decide</td>
+      <td>Eligibility</td>
+      <td>Who should be able to receive rewards: Employees, consultants, advisors, members of the board of directors (the “Participants”)</td>
+    </tr>
+    <tr>
+      <td>Funding</td>
+      <td>Via the Company (indirectly through all shareholders pro rata)</td>
+    </tr>
+    <tr>
+      <td>Issue Price</td>
+      <td>Free of charge</td>
+    </tr>
+    <tr>
+      <td>Conditions to Cash-Payments</td>
+      <td>
+        <ul>
+          <li>Triggering event as described above</li>
+          <li>Vesting fulfilled</li>
+          <li>No material breach of employment relationship</li>
+          <li>No termination of employment relationship</li>
+        </ul>
+      </td>
+    </tr>
+    <tr>
+      <td>Transferability of Awards</td>
+      <td>None, unless in case of death as under the applicable matrimonial property and inheritance laws and the Participant's lawful last will.</td>
+    </tr>
+    <tr>
+      <td>Term of the Plan (Expiration)</td>
+      <td>10 years</td>
+    </tr>
+    <tr>
+      <td>Anti-Dilution Protection</td>
+      <td>The Participants acknowledge and agree that the Options granted under this Plan are granted without protection against future dilutive effects (e.g. issuance of new shares of the Company).</td>
+    </tr>
+    <tr>
+      <td>If Virtual Options: Exercisability</td>
+      <td>Generally, within 10 years upon vesting. Only in connection with M&A transactions, see section 10.</td>
+    </tr>
+    <tr>
+      <td>Governing law and Jurisdiction</td>
+      <td>Swiss law, place of domicile of the Company.</td>
     </tr>
   </tbody>
 </table>
