add direct links to people of KC, WV, Lexr

--- a/src/markdown/help/employee-participation-guide.mdx
+++ b/src/markdown/help/employee-participation-guide.mdx
@@ -55,7 +55,7 @@ images:
 
 ##### Partners
 
-Our partners [Kellerhals Carrard](https://www.kellerhals-carrard.ch/), [Wenger&Vieli](https://www.wengervieli.ch/) and [Lexr](https://lexr.ch/) offer a free first consultation for startups.
+Our partners [Kellerhals Carrard](https://www.kellerhals-carrard.ch/de/personen/karim-maizar.html), [Wenger&Vieli](https://www.wengervieli.ch/de-ch/team/baier-michael) and [Lexr](https://calendly.com/lexrag/consultation-with-christian-meisser) offer a free first consultation for startups.
 
 ##### More resources
 
