--- a/src/markdown/help/employee-participation-guide.mdx
+++ b/src/markdown/help/employee-participation-guide.mdx
@@ -6,7 +6,7 @@ images:
   - ./employee-participation-guide/kellerhals_carrard.png
   - ./employee-participation-guide/wenger_vieli.png
   - ./employee-participation-guide/lexr.png
-  - ../../img/esop.png
+  - ../../img/employee-participation.png
 ---
 
 <div class="alert alert-primary">
@@ -35,7 +35,7 @@ images:
     * Decide the amount to give and adjust the allocation at the end of the contract accordingly.
     * Let the employee sign participation plan agreement.
 
-<Img src="esop.png" align="right" size="300"/>
+<Img src="employee-participation.png" align="right" size="300"/>
 
 6. To track your pool and vesting schedules on Ledgy:
     * Head to the transaction page (free) or incentives page (premium) and create an ESOP or PSOP pool.
