--- a/src/markdown/help/employee-participation-guide/esop.mdx
+++ b/src/markdown/help/employee-participation-guide/esop.mdx
@@ -20,14 +20,14 @@ The following guide will help you decide which parameters need to be decided for
       <th>How to decide</th>
     </tr>
     <tr>
-      <td>Reserved pool size</td>
+      <td>Size of the pool</td>
       <td>
         Number of options reserved for employees, with one option equal to one common share of the company.<br /><br />
         It is often also expressed in percent of the total shares.
       </td>
       <td>
         Discuss with your board, they have to approve the plan.<br /><br />
-        <strong>Common practice</strong> at the seed stage is 5 - 10% of the company on a fully diluted basis. This typically goes up to 20% during the company lifetime.
+        Common practice at the seed stage is 5 - 10% of the company’s share capital on a fully diluted basis. This typically goes up to 20% during the company lifetime.
       </td>
     </tr>
     <tr>
@@ -44,7 +44,7 @@ The following guide will help you decide which parameters need to be decided for
       </td>
     </tr>
     <tr>
-      <td>Accelerated Vesting at exit, change of control or IPO</td>
+      <td>Accelerated vesting at exit, change of control or IPO</td>
       <td>
         Choose among 3 possibilities:
         <ol>
@@ -58,7 +58,7 @@ The following guide will help you decide which parameters need to be decided for
         </ol>
       </td>
       <td>
-        The common practice is 2. as it provides employees with the security of accelerated vesting, while still protecting the buyer by preventing that all employees leave with the money directly after the transaction. Without this, the company might not be attractive to buyers.
+        Also this you should discuss with your investors. The common practice is 1 but 2 is also often seen, especially in the US.
       </td>
     </tr>
     <tr>
@@ -67,13 +67,13 @@ The following guide will help you decide which parameters need to be decided for
         Choose between
         <ol>
           <li>Corresponding to nominal value of common share</li>
-          <li>Fair market value of one common share at time of grant (to be confirmed from tax law point of view)</li>
+          <li>Fair market value (or formula value) of one common registered share at time of grant (to be confirmed from tax law point of view)</li>
         </ol>
-        If you want to implement a tax-ruling to agree with the tax authority on a fair market value of the common shares upon exercise of the options
+        If you want to implement a tax-ruling to agree with the tax authority on a formula value of the common registered shares upon exercise of the options.
       </td>
       <td>
-        The common practice is 1. It is also the most employee friendly.<br /><br />
-        Tax ruling: In order to maximally take advantage of the tax optimization, a tax ruling is recommended. However it can also be done at a later time point (but of course before the first exercises).
+        The common practice in seed stage companies is 1. It is also the most employee friendly.<br /><br />
+        Tax ruling: In order to maximally take advantage of the tax optimization, a tax ruling is recommended. However it can also be done at a later time point (but before the first exercises).
       </td>
     </tr>
     <tr>
@@ -91,21 +91,19 @@ The following guide will help you decide which parameters need to be decided for
     <tr>
       <td>Termination <strong>during</strong> Vesting Period</td>
       <td>
-        If an employee is terminated (in good terms) before the end of the vesting period, vested Awards are kept, unless the Participant is a bad leaver and unvested awards lapse.<br /><br />
-        In case of disability or death, vested awards are kept and unvested awards lapse.<br /><br />
-        Also, you should decide if the company should have a repurchase right on vested awards in case the employee is fired (in good terms).
+        If the company should have a repurchase right on vested options in case the employee’s employment is terminated (in good terms).
       </td>
       <td>
-        The common practice is not to have a repurchase right and is more friendly for the employees.
+        The common practice is to have a repurchase right even though it is rarely exercised.
       </td>
     </tr>
     <tr>
       <td>Termination <strong>after</strong> Vesting Period</td>
       <td>
-        If the company should have a repurchase right on vested awards in case the employee is terminated (in good terms).
+        If the company should have a repurchase right on vested options if the employee’s employment is terminated (in good terms).
       </td>
       <td>
-        The common practice is not to have a repurchase right. The alternative is also not very employee friendly.
+        The common practice is to have a repurchase right even though it is rarely exercised.
       </td>
     </tr>
   </tbody>
