--- a/src/markdown/help/employee-participation-guide.mdx
+++ b/src/markdown/help/employee-participation-guide.mdx
@@ -11,10 +11,8 @@ images:
 
 <div class="alert alert-primary">
   Ask all your questions at the free <strong>Webinar on June 4, 11:30</strong><br />
-  <small>
-    With Karim Maizar of Kellerhals Carrard and Ben Brandt of Ledgy.<br />
-    The link to the webinar will be published here.
-  </small>
+  <small>With Karim Maizar of Kellerhals Carrard and Ben Brandt of Ledgy.</small><br />
+  <strong><a href="https://ledgy.typeform.com/to/jZPB9R" target="_blank">SIGN UP</a></strong>
 </div>
 
 **Note**: These legal templates are currently only available in **Switzerland**. Other countries will follow. Reach out to us if you want yours to be next.
