fix signup link

--- a/src/markdown/help/employee-participation-guide.mdx
+++ b/src/markdown/help/employee-participation-guide.mdx
@@ -23,7 +23,7 @@ images:
 
 1. Choose between a stock option plan (ESOP) or phantom stock option plan (PSOP). [This guide](/help/employee-participation-guide/esop-vs-psop) helps you by comparing their advantages and disadvantes.
 
-2. [Sign up](https://app.ledgy.com/signup), create your company (free), head to the documents page, click *Legal templates* and download your template
+2. [Sign up](#try), create your company (free), head to the documents page, click *Legal templates* and download your template
 
 3. There are some parts to decide and adjust. The respective guides for [ESOP](/help/employee-participation-guide/esop) and [PSOP](/help/employee-participation-guide/psop) will help you to decide.
 
