Add some more selling points to jobs page

--- a/src/markdown/jobs.mdx
+++ b/src/markdown/jobs.mdx
@@ -10,12 +10,21 @@ images:
 ###### We are
 
 * A diverse team of 7 young people from 5 countries
+* Committed to our values of transparency, ambition and fun
+* Inspired by the startup scene and hacker spirit in Silicon Valley and want to bring this vibe to Switzerland
 * Purpose-driven, trying to contribute our part to make the world a little better
 * Outdoor, meditation, and space enthusiasts
-* Inspired by the startup scene and hacker spirit in Silicon Valley and want to bring this vibe to Switzerland
-* Committed to our values of transparency, ambition and fun
+
+###### At Ledgy you can
+
+* Bring in your own ideas and take on responsibility very quickly
+* Learn a lot in different areas
+* Try yourself on diverse and exciting challenges
+* Build a Saturn V lego rocket ;)
 
 ###### We’re looking for
 
-* [Business development intern](/jobs/business-developer)
-* Designer (UX/graphics)
+* [Business Development Intern](/jobs/business-developer)
+* Law school graduate
+* UX Designer
+* Graphics Designer
