--- a/src/locale/de/messages.po
+++ b/src/locale/de/messages.po
@@ -6,7 +6,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "POT-Creation-Date: 2018-09-12T18:40:54.619Z\n"
-"PO-Revision-Date: 2019-06-17 17:18+0200\n"
+"PO-Revision-Date: 2019-06-18 17:48+0200\n"
 "Language: de\n"
 "Report-Msgid-Bugs-To: \n"
 "Last-Translator: \n"
@@ -735,8 +735,8 @@ msgid "Managing directors"
 msgstr "Geschäftsleitung"
 
 #: src/layouts/team.jsx:86
-msgid "Marius has a background in computer science, graduated from Milan University and since 2012 is passionate about startups and hackathons"
-msgstr "Marius hat einen Hintergrund in Informatik, hat sein Studium an der Universität Mailand abgeschlossen und ist seit 2012 leidenschaftlich für Startups und Hackathons tätig"
+msgid "Marius has a background in computer science, graduated from Milan University and worked as a full stack developer at XING and On"
+msgstr "Marius hat einen Hintergrund in Informatik, hat sein Studium an der Universität Mailand abgeschlossen und arbeitete als Full-Stack Entwickler bei XING und On"
 
 #: src/pages/about-us.jsx:18
 msgid "Meet the team behind Ledgy that went out to help startups thrive. Learn more about the people who trust in us."
