--- a/src/locale/fr/messages.po
+++ b/src/locale/fr/messages.po
@@ -736,8 +736,8 @@ msgid "Managing directors"
 msgstr "Directeurs généraux"
 
 #: src/layouts/team.jsx:86
-msgid "Marius has a background in computer science, graduated from Milan University and since 2012 is passionate about startups and hackathons"
-msgstr "Marius a une formation en informatique, diplômé de l’Université de Milan et est passionné depuis 2012 par les startups et les hackathons"
+msgid "Marius has a background in computer science, graduated from Milan University and worked as a full stack developer at XING and On"
+msgstr "Marius a une formation en informatique, diplômé de l’Université de Milan et a travaillé comme développeur full stack chez XING et On"
 
 #: src/pages/about-us.jsx:18
 msgid "Meet the team behind Ledgy that went out to help startups thrive. Learn more about the people who trust in us."
