--- a/src/locale/de/messages.po
+++ b/src/locale/de/messages.po
@@ -735,7 +735,7 @@ msgid "Managing directors"
 msgstr "Geschäftsleitung"
 
 #: src/layouts/team.jsx:86
-msgid "Marius has a background in computer science, graduated from Milan University and worked as a full stack developer at XING and On"
+msgid "Marius has a background in computer science, graduated from Milan University and worked as a full-stack developer at XING and On"
 msgstr "Marius hat einen Hintergrund in Informatik, hat sein Studium an der Universität Mailand abgeschlossen und arbeitete als Full-Stack Entwickler bei XING und On"
 
 #: src/pages/about-us.jsx:18
