--- a/src/locale/fr/messages.po
+++ b/src/locale/fr/messages.po
@@ -736,7 +736,7 @@ msgid "Managing directors"
 msgstr "Directeurs généraux"
 
 #: src/layouts/team.jsx:86
-msgid "Marius has a background in computer science, graduated from Milan University and worked as a full stack developer at XING and On"
+msgid "Marius has a background in computer science, graduated from Milan University and worked as a full-stack developer at XING and On"
 msgstr "Marius a une formation en informatique, est diplômé de l’Université de Milan et a travaillé comme développeur full stack chez XING et On"
 
 #: src/pages/about-us.jsx:18
